Fixed: Scrollbar collision with checkboxes on Addding Existing Rooms/Spaces (#23189)

--- a/res/css/views/dialogs/_AddExistingToSpaceDialog.pcss
+++ b/res/css/views/dialogs/_AddExistingToSpaceDialog.pcss
@@ -225,7 +225,7 @@ limitations under the License.
 .mx_AddExistingToSpace_entry {
     display: flex;
     margin-top: 12px;
-    width: 98%;
+    width: calc(100% - 6px); 
 
     .mx_DecoratedRoomAvatar, /* we can't target .mx_BaseAvatar here as it'll break the decorated avatar styling */
     .mx_BaseAvatar.mx_RoomAvatar_isSpaceRoom {
